fix nav gap 5

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ nav {
     padding: 0;
 
     @media screen and (max-width: 1199px) {
-        gap: 2vw;    
+        gap: 5px;    
     }
 }
 
